# georgix

./: CREDITS.md  Cargo.toml  LICENSE.md  Makefile  grub.cfg  x86_64-unknown-georgix-gnu.json
.cargo/: config  config.toml
.github/workflows/: ci.yml
src/: boot.rs  main.rs  test.rs
src/acpi/: mod.rs  rsdp.rs
src/arch/x86_64/: addresses.rs  instructions.rs  io.rs  linker.ld  mod.rs  multitasking.rs  segmentation.rs  test.rs  util.rs
src/arch/x86_64/boot/: header.S  mod.rs  start.S
src/arch/x86_64/instructions/: interrupts.rs  io.rs  misc.rs  mod.rs  segmentation.rs
src/arch/x86_64/interrupts/: apic.rs  handlers.rs  idt.rs  ioapic.rs  mod.rs  pic.rs  vectors.rs
src/arch/x86_64/memory/: mod.rs
src/arch/x86_64/memory/addressing/: mod.rs  physical.rs  virtual.rs
src/arch/x86_64/memory/segmentation/: mod.rs
src/arch/x86_64/multitasking/: mod.rs
src/arch/x86_64/registers/: control.rs  mod.rs  segmentation.rs
src/arch/x86_64/segmentation/: gdt.rs  mod.rs
src/arch/x86_64/vga/registers/: crtc.rs  external.rs  mod.rs
src/boot/: console.rs  mod.rs
src/boot/info/: mem.rs  mod.rs  table.rs  tags.rs
src/memory/: mod.rs
src/memory/physical/: mod.rs
src/memory/physical/allocation/: early.rs  mod.rs
src/multiboot/: magic.rs  mod.rs
src/multiboot/info/: memory.rs  mod.rs  table.rs  tags.rs
src/util/: alignment.rs
src/vga/text/: colors.rs  console.rs  mod.rs
test/: Cargo.toml
test/src/: integration.rs  lib.rs  types.rs
util/: run  runner
