[package]
name = "georgix"
version = "0.1.0"
authors = ["George Claghorn <george@hey.com>"]
edition = "2018"

[dependencies]
spin = "0.5.2"
volatile = "0.2.6"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.9.6"
uart_16550 = "0.2.0"

[dev-dependencies.test]
path = "./test"
