[package]
name = "georgix"
version = "0.1.0"
authors = ["George Claghorn <george@hey.com>"]
edition = "2018"

[dependencies]
spin = "0.5.2"
volatile = "0.2.6"
bit_field = "0.10.0"
bitflags = "1.2.1"
tap = "1.0.0"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
arrayvec = { version = "0.7.1", default-features = false }

[target.'cfg(target_arch = "x86_64")'.dependencies]
uart_16550 = "0.2.0"

[dev-dependencies.test]
path = "./test"
